--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,113 @@
-<p>This is the about view.</p>
+<h1>Acerca de CUPN</h1>
+<div class="row" style="padding:50px 10px;border-bottom: 1px solid #f0f0f0;">
+  <div class="container" style="max-width: none;">
+    <div class="col-sm-4 text-justify">
+      <h2>ADVANTAGES</h2><br>
+      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL </h4>
+
+      <p>
+        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
+        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.
+      </p><br>
+      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL </h4>
+
+      <p>
+        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
+        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.
+      </p><br>
+      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL </h4>
+
+      <p>
+        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
+        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.
+      </p>
+    </div>
+    <div class="col-sm-8 text-justify">
+      <h2>A FEW WORDS ABOUT US</h2><br>
+      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL. MAURIS ACCUMSAN NULLA VEL DIAM. SED IN LACUS UT ENIM
+        ADIPISCING ALIQUET. NULLA VENENATIS. IN PEDE MI, ALIQUET SIT AMET, EUISMOD IN, AUCTOR UT, LIGULA. ALIQUAM
+        DAPIBUS
+        TINCIDUNT METUS.</h4><br>
+
+      <p>
+        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
+        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies
+        pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, conseteter
+        adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget,
+        elementum
+        vel, cursus eleifend, elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
+        molestie
+        lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Lorem ipsum dolor sit amet,
+        consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Morbi nunc odio, gravida at, cursus nec,
+        luctus
+        a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec
+        sit
+        amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet
+        aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit.
+      </p><br>
+      <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Morbi nunc odio,
+        gravida at, cursus nec, luctus a, lorem.</h4>
+
+      <p>
+        Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet
+        eros.
+        Lorem ipsum dolor sit amet, conseteter adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo.
+        Ut
+        tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce
+        suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
+        lacus.
+        Morbi nunc odio, gravida at, cursus nec.
+      </p>
+    </div>
+  </div>
+
+</div>
+<div class="row" style="margin-top: 5px; padding:50px 10px;background-color: #F6F6F6;">
+  <div class="col-sm-4">
+    <h4>TESTIMONIALS</h4><br>
+
+    <p><i>
+      Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
+      lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies
+      pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer
+      adipiscing elit.
+    </i>
+      <br><span style="color:#FD6417">- Sara Tomson</span><br>
+    </p>
+    <br>
+
+    <p><i>
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Morbi nunc odio,
+      gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec
+      accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </i>
+      <br><span style="color:#FD6417">- Miranda Lopez</span><br>
+    </p>
+    <br>
+
+    <p><i>
+      Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra
+      magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing
+      elit.
+    </i>
+      <br><span style="color:#FD6417">- Linda Grey</span><br>
+    </p>
+  </div>
+  <div class="col-sm-8">
+    <h4>PHOTOS</h4>
+
+    <div class="row">
+      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic1.jpg"/></div>
+      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic2.jpg"/></div>
+      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic3.jpg"/></div>
+    </div>
+    <br>
+
+    <div class="row">
+      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic4.jpg"/></div>
+      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic5.jpg"/></div>
+      <div class="col-sm-4"></div>
+    </div>
+  </div>
+</div>
