Content added to tabs in main page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,117 +1,248 @@
-<div class="container" style="max-width:none;">
-  <div id="myCarousel"
-       style="display: none; width:70%;max-width:700px;min-width:200px;margin-left: auto;margin-right: auto;">
-    <div><img src="images/picture1.jpg" height="300px"/>
-    </div>
-    <div><img src="images/picture2.jpg" height="300px"/></div>
-  </div>
-
-  <div class="row" style="width:100%;padding-bottom:50px;border-bottom: 1px solid #f0f0f0;">
-    <div class="col-sm-3">
-      <h4 class="text-center"><span class="glyphicon glyphicon-star"></span> MAURIS ACCUMSAN NULLA</h4><br>
-
-      <p class="text-center">
-        Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed dolor.
-        Aliquam congue fermentum nisl.
-      </p>
-    </div>
-    <div class="col-sm-3">
-      <h4 class="text-center"><span class="glyphicon glyphicon-book"></span> ETIAM CURSUS LEO VEL</h4><br>
-
-      <p class="text-center">
-        Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed dolor.
-        Aliquam congue fermentum nisl.
-      </p></div>
-    <div class="col-sm-3">
-      <h4 class="text-center"><span class="glyphicon glyphicon-check"></span>VIVAMUS EGET NIBH</h4><br>
-
-      <p class="text-center">
-        Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed dolor.
-        Aliquam congue fermentum nisl.
-      </p></div>
-    <div class="col-sm-3">
-      <h4 class="text-center"><span class="glyphicon glyphicon-glass"></span> UT PHARETRA AUGUE</h4><br>
-
-      <p class="text-center">
-        Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed dolor.
-        Aliquam congue fermentum nisl.
-      </p></div>
-  </div>
-
-</div>
-
+<img src="images/la_X.jpg" width="100%"/>
 <br><br>
-<div class="container" style="max-width: none;">
-  <ul class="nav nav-tabs">
-    <li role="presentation" ng-class="{active:tab=='Aspirantes'}"><a href ng-click="tab='Aspirantes'">Aspirantes</a></li>
-    <li role="presentation" ng-class="{active:tab=='Alumnos'}"><a href ng-click="tab='Alumnos'">Alumnos</a></li>
-    <li role="presentation" ng-class="{active:tab=='Egresados'}"><a href ng-click="tab='Egresados'">Egresados</a></li>
-    <li role="presentation" ng-class="{active:tab=='Academicos'}"><a href ng-click="tab='Academicos'">Académicos</a></li>
-    <li role="presentation" ng-class="{active:tab=='Administrativos'}"><a href ng-click="tab='Administrativos'">Administrativos</a></li>
-  </ul>
-  <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
-       ng-show="tab=='Aspirantes'">
-    Seccion de aspirantes
-  </div>
-  <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
-       ng-show="tab=='Alumnos'">
-    Seccion de Alumnos
-  </div>
-  <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
-       ng-show="tab=='Egresados'">
-    Seccion de Egresados
-  </div>
-  <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
-       ng-show="tab=='Academicos'">
-    Seccion de Academicos
-  </div>
-  <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
-       ng-show="tab=='Administrativos'">
-    Seccion de Administrativos
-  </div>
+<div class="content" style="padding:20px;max-width: none;">
+  <div>
+    <ul class="nav nav-tabs">
+      <li role="presentation" ng-class="{active:tab=='Aspirantes'}"><a href ng-click="tab='Aspirantes'">Aspirantes</a>
+      </li>
+      <li role="presentation" ng-class="{active:tab=='Alumnos'}"><a href ng-click="tab='Alumnos'">Alumnos</a></li>
+      <li role="presentation" ng-class="{active:tab=='Egresados'}"><a href ng-click="tab='Egresados'">Egresados</a></li>
+      <li role="presentation" ng-class="{active:tab=='Academicos'}"><a href ng-click="tab='Academicos'">Académicos</a>
+      </li>
+      <li role="presentation" ng-class="{active:tab=='Administrativos'}"><a href ng-click="tab='Administrativos'">Administrativos</a>
+      </li>
+    </ul>
+    <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
+         ng-show="tab=='Aspirantes'">
+      <div class="row">
+        La calidad y diversidad de nuestra oferta académica desde bachillerato hasta posgrados incluyendo el Sistema de
+        Universidad Virtual es motivo de orgullo para toda la Red Universitaria de Jalisco. Conócela y entérate de los
+        requisitos de admisión.
+        La siguiente información puede ser útil para ti:
+      </div>
+      <br>
 
-</div>
-<br><br><br><br>
+      <div class="row">
+        <div class="col-sm-6">
+          <a href="#">Registro de tramites</a><br>
 
-<div style="margin-top: 5px; padding: 50px 10px;background-color: #F6F6F6;">
+          <p>
+            Pasos a seguir, cambios de aspiración y publicación de resultados.
+          </p>
+          <a href="#">Seguimiento de tramites</a><br>
 
-  <div class="container" style="max-width: none;">
-    <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <h2 class="text-center">PRAESENT JUSTO DOLOR, LOBORTIS QUIS LOBORTIS DIGNISSIM,
-          PULVINAR AC, LOREM. VESTIBULUM SED ANTE</h2><br>
+          <p>
+            Para dar seguimiento a tu trámite de ingreso.
+          </p>
+          <a href="#">Documentación requerida</a><br>
 
-        <hr
-          style="margin: auto;margin-bottom:-15px;border-bottom: none;border-top: 1px solid #d1d1d1;width: 550px;display: block;">
-        <br>
-        <hr style="margin: auto;border-bottom: none;border-top: 1px solid #d1d1d1;width: 450px;display: block;">
-        <br>
+          <p>
+            Para todos los niveles, desde bachillerato hasta posgrado.
+          </p>
+        </div>
+        <div class="col-sm-6">
+          <a href="#">Oferta Académica</a><br>
 
-        <div class="container"><p class="text-center">Fusce euismod consequat ante. Lorem ipsum dolor sit amet,
-          consectetuer adipiscing elit.
-          Pellentesque sed dolor. Aliquam congue fermentum nisl.
-          Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi, aliquet
-          sit
-          amet, euismod in, auctor ut, ligula.
-          Aliquam dapibus tincidunt metus</p></div>
-        <br><br>
+          <p>
+            Catálogo de programas educativos.
+          </p>
+          <a href="#">Calendarios Oficiales</a><br>
 
+          <p>
+            Escolares y de trámites para aspirantes.
+          </p>
+          <a href="#">Estudios realizados en el extranjero</a><br>
+
+          <p>
+            Consideraciones y requisitos.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic1.jpg"></div>
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic2.jpg"></div>
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic3.jpg"></div>
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic4.jpg"></div>
-    </div>
-    <br>
+    <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
+         ng-show="tab=='Alumnos'">
+      <div class="row">
+        Los alumnos son la razón de ser de la universidad. Nuestra prioridad en todos los niveles es una educación
+        integral con perspectivas de sustentabilidad y conciencia social.
+      </div>
+      <h4>Servicios para alumnos</h4>
 
-    <div class="row">
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic5.jpg"></div>
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic6.jpg"></div>
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic7.jpg"></div>
-      <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic8.jpg"></div>
+      <div class="row">
+        <div class="col-sm-4"><a href="#">Taller de estrategias básicas de aprendizaje</a><br>
+          <a href="#">Difusión y asesoría en becas fuera de la Universidad de Guadalajara</a><br>
+          <a href="#">Asesoría en derechos y obligaciones</a><br>
+          <a href="#">Universidad saludable (Afiliación- PrevenIMSS)</a><br></div>
+        <div class="col-sm-4"><a href="#">Trámites y control documental</a><br>
+          <a href="#">Ceremonia de Reconocimiento a Estudiantes Sobresalientes (CRES)</a><br>
+          <a href="#">Torneos deportivos intercentros</a><br>
+          <a href="#">Programa Nacional de Becas para la Educación Superior PRONABES</a><br>
+        </div>
+        <div class="col-sm-4">
+          <a href="#">Oficina de conexión para prácticas profesionales en el extranjero</a><br>
+          <a href="#">Apoyos extracurriculares</a><br>
+          <a href="#">Ligas deportivas interprepas</a><br>
+          <a href="#">Becas Proulex</a><br>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
+         ng-show="tab=='Egresados'">
+      <div class="row">
+        Los egresados y ex -alumnos tienen la posibilidad de continuar conectados con la universidad, recibir beneficios
+        adicionales y retribuir a la comunidad.
+      </div>
+      <h4>Servicios para Egresados</h4>
+
+      <div class="row">
+        <div class="col-sm-4"><a href="#">Red de bolsa de trabajo</a><br>
+          <a href="#">Oficina de conexión para prácticas profesionales en el extranjero</a><br>
+        </div>
+        <div class="col-sm-4">
+          <a href="#">Credencial de egresados</a><br>
+          <a href="#">Difusión y asesoría en becas fuera de la Universidad de Guadalajara</a><br>
+        </div>
+        <div class="col-sm-4">
+          <a href="#">Trámites y control documental</a><br>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
+         ng-show="tab=='Academicos'">
+      <div class="row">
+        La diversidad y el compromiso de los académicos aseguran la excelencia académica en las aulas y los centros de
+        investigación de todas las áreas del conocimiento.
+      </div>
+      <h4>Circulares</h4>
+      <a href="#">Circular N° 16</a><br>
+
+      <p>LUNES 17 de Noviembre de 2014, (en conmemoración de 20 de noviembre), será día de descanso obligatorio para el
+        personal Académico y Administrativo (cláusulas 33 y 61 de los Contratos Colectivos de Trabajo celebrados con el
+        STAUdeG y SUTUdeG, respectivamente).</p>
+
+      <a href="#">Circular N° 14</a><br>
+
+      <p>Lunes 15 de septiembre de 2014, Día de descanso obligatorio para personal académico y administrativo de la
+        UdeG, en sustitución del 12 de octubre, a solicitud del Sindicato de Trabajadores Académicos de la UdeG y del
+        Sindicato Único de Trabajadores de la
+        <UdeG class=""></UdeG>
+      </p>
+
+      <a href="#">Circular N° 13</a><br>
+
+      <p>MARTES 16 de Septiembre de 2014: Día de descanso obligatorio para el personal académico y administrativo de la
+        UdeG (Cláusulas 33 y 61 de los Contratos Colectivos de Trabajo celebrados con el STAUdeG y SUTUdeG,
+        respectivamente).</p>
+
+
+    </div>
+    <div class="panel panel-default" style="border-top: 0;border-radius: 0;min-height:100px;padding:20px;"
+         ng-show="tab=='Administrativos'">
+      <div class="row">
+        Las actividades administrativas acotan y mantienen vigentes las políticas y procesos universitarios. Esta
+        sección te mantendrá informado sobre las actividades y procesos administrativos.
+      </div>
+      <h4>Circulares</h4>
+      <a href="#">Circular N° 16</a><br>
+
+      <p>LUNES 17 de Noviembre de 2014, (en conmemoración de 20 de noviembre), será día de descanso obligatorio para el
+        personal Académico y Administrativo (cláusulas 33 y 61 de los Contratos Colectivos de Trabajo celebrados con el
+        STAUdeG y SUTUdeG, respectivamente).</p>
+
+      <a href="#">Circular N° 14</a><br>
+
+      <p>Lunes 15 de septiembre de 2014, Día de descanso obligatorio para personal académico y administrativo de la
+        UdeG, en sustitución del 12 de octubre, a solicitud del Sindicato de Trabajadores Académicos de la UdeG y del
+        Sindicato Único de Trabajadores de la
+        <UdeG class=""></UdeG>
+      </p>
+
+      <a href="#">Circular N° 13</a><br>
+
+      <p>MARTES 16 de Septiembre de 2014: Día de descanso obligatorio para el personal académico y administrativo de la
+        UdeG (Cláusulas 33 y 61 de los Contratos Colectivos de Trabajo celebrados con el STAUdeG y SUTUdeG,
+        respectivamente).</p>
+
+    </div>
+
+    <div class="row" style="width:100%;padding-bottom:50px;border-bottom: 1px solid #f0f0f0;">
+      <div class="col-sm-3">
+        <h4 class="text-center"><span class="glyphicon glyphicon-star"></span> MAURIS ACCUMSAN NULLA</h4><br>
+
+        <p class="text-center">
+          Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed
+          dolor.
+          Aliquam congue fermentum nisl.
+        </p>
+      </div>
+      <div class="col-sm-3">
+        <h4 class="text-center"><span class="glyphicon glyphicon-book"></span> ETIAM CURSUS LEO VEL</h4><br>
+
+        <p class="text-center">
+          Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed
+          dolor.
+          Aliquam congue fermentum nisl.
+        </p></div>
+      <div class="col-sm-3">
+        <h4 class="text-center"><span class="glyphicon glyphicon-check"></span>VIVAMUS EGET NIBH</h4><br>
+
+        <p class="text-center">
+          Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed
+          dolor.
+          Aliquam congue fermentum nisl.
+        </p></div>
+      <div class="col-sm-3">
+        <h4 class="text-center"><span class="glyphicon glyphicon-glass"></span> UT PHARETRA AUGUE</h4><br>
+
+        <p class="text-center">
+          Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque sed
+          dolor.
+          Aliquam congue fermentum nisl.
+        </p></div>
+    </div>
+
+    <br><br><br><br>
+
+    <div style="margin-top: 5px; padding: 50px 10px;background-color: #F6F6F6;">
+
+      <div class="container" style="max-width: none;">
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10">
+            <h2 class="text-center">PRAESENT JUSTO DOLOR, LOBORTIS QUIS LOBORTIS DIGNISSIM,
+              PULVINAR AC, LOREM. VESTIBULUM SED ANTE</h2><br>
+
+            <hr
+              style="margin: auto;margin-bottom:-15px;border-bottom: none;border-top: 1px solid #d1d1d1;width: 550px;display: block;">
+            <br>
+            <hr style="margin: auto;border-bottom: none;border-top: 1px solid #d1d1d1;width: 450px;display: block;">
+            <br>
+
+            <div class="container"><p class="text-center">Fusce euismod consequat ante. Lorem ipsum dolor sit amet,
+              consectetuer adipiscing elit.
+              Pellentesque sed dolor. Aliquam congue fermentum nisl.
+              Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi,
+              aliquet
+              sit
+              amet, euismod in, auctor ut, ligula.
+              Aliquam dapibus tincidunt metus</p></div>
+            <br><br>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic1.jpg"></div>
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic2.jpg"></div>
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic3.jpg"></div>
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic4.jpg"></div>
+        </div>
+        <br>
+
+        <div class="row">
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic5.jpg"></div>
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic6.jpg"></div>
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic7.jpg"></div>
+          <div class="col-sm-3"><img style="width: 100%" src="images/page1_pic8.jpg"></div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
