some icons added for home page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,11 +24,13 @@
 
       <div class="row">
         <div class="col-sm-6">
+        <img src="images/Registro-Tramites-icon.png" alt="Registro-Tramite" style="width:32px">
           <a href="#">Registro de tramites</a><br>
 
           <p>
             Pasos a seguir, cambios de aspiración y publicación de resultados.
           </p>
+          <img  src="images/seguimiento-icon.png" alt="seguimiento" style="width:32px">
           <a href="#">Seguimiento de tramites</a><br>
 
           <p>
@@ -41,11 +43,13 @@
           </p>
         </div>
         <div class="col-sm-6">
+        <img src="images/education-icon.png" style="width:32px">
           <a href="#">Oferta Académica</a><br>
 
           <p>
             Catálogo de programas educativos.
           </p>
+          <img src="images/todays-icon.png" alt="calendario" style="width:32px">
           <a href="#">Calendarios Oficiales</a><br>
 
           <p>
